feat(troubleshooting) Project structure redesigned

--- a/episode-0001-mockito-agent/pom.xml
+++ b/episode-0001-mockito-agent/pom.xml
@@ -12,18 +12,15 @@
   </parent>
 
   <groupId>de.devtime.examples</groupId>
-  <artifactId>library</artifactId>
+  <artifactId>episode-0001-mockito-agent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>Demo Bibliothek</name>
+  <name>episode-0001-mockito-agent</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
     <java.version>25</java.version>
     <spring-boot.version>4.0.1</spring-boot.version>
-    
-    <java-uuid-generator.version>5.2.0</java-uuid-generator.version>
-    <springdoc-openapi-starter-webmvc-ui.version>3.0.1</springdoc-openapi-starter-webmvc-ui.version>
   </properties>
 
 
@@ -57,28 +54,8 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-log4j2</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-    </dependency>
-
-    <!-- SpringDoc -->
-    <dependency>
-      <groupId>org.springdoc</groupId>
-      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-      <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
-    </dependency>
-
 
     <!-- =================== -->
     <!-- Common dependencies -->
@@ -87,11 +64,6 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.uuid</groupId>
-      <artifactId>java-uuid-generator</artifactId>
-      <version>${java-uuid-generator.version}</version>
     </dependency>
 
     <!-- ================= -->
