--- a/episode-0002-app-context-provider/pom.xml
+++ b/episode-0002-app-context-provider/pom.xml
@@ -12,10 +12,10 @@
   </parent>
 
   <groupId>de.devtime.examples</groupId>
-  <artifactId>library</artifactId>
+  <artifactId>episode-0002-app-context-provider</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>Demo Bibliothek</name>
+  <name>episode-0002-app-context-provider</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
