--- a/episode-0003-log4j2/pom.xml
+++ b/episode-0003-log4j2/pom.xml
@@ -12,18 +12,20 @@
   </parent>
 
   <groupId>de.devtime.examples</groupId>
-  <artifactId>library</artifactId>
+  <artifactId>episode-0003-log4j2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>Demo Bibliothek</name>
+  <name>episode-0003-log4j2</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
     <java.version>25</java.version>
     <spring-boot.version>4.0.1</spring-boot.version>
+    
+    <java-uuid-generator.version>5.2.0</java-uuid-generator.version>
+    <springdoc-openapi-starter-webmvc-ui.version>3.0.1</springdoc-openapi-starter-webmvc-ui.version>
   </properties>
-
-
+  
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -39,7 +41,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
+  
   <dependencies>
     <!-- ===================== -->
     <!-- dev|time dependencies -->
@@ -55,6 +57,17 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-log4j2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <!-- SpringDoc -->
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
     </dependency>
 
     <!-- =================== -->
